# scisim

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeListsClangCXXFlags.txt  CMakeListsGNUCXXFlags.txt  CMakeListsIntelCXXFlags.txt  circle.yml  get_dependencies.sh  readme.md  readme_ipopt.md  remove_dependencies.sh  todo.md
.circleci/: config.yml
ball2d/: Ball2DSim.cpp  Ball2DSim.h  Ball2DState.cpp  Ball2DState.h  Ball2DUtilities.cpp  Ball2DUtilities.h  CMakeLists.txt  CMakeSourceFiles.txt  Integrator.h  (+11 more)
ball2dcli/: CMakeLists.txt  CMakeSourceFiles.txt  ball2d_cli.cpp
ball2dqt4/: CMakeLists.txt  CMakeSourceFiles.txt  ContentWidget.cpp  ContentWidget.h  DisplayController2D.cpp  DisplayController2D.h  GLCircleRenderer2D.cpp  GLCircleRenderer2D.h  GLWidget.cpp  GLWidget.h  Window.cpp  Window.h  ball2d_qt4.cpp  ball2d_qt5.cpp
ball2dqt5/: AnnulusShader.cpp  AnnulusShader.h  AxisShader.cpp  AxisShader.h  BallShader.cpp  BallShader.h  CMakeLists.txt  CMakeSourceFiles.txt  CircleShader.cpp  CircleShader.h  CocoaBridge.h  CocoaBridge.mm  ContentWidget.cpp  ContentWidget.h  DisplayController2D.h  GLCircleRenderer2D.cpp  GLCircleRenderer2D.h  GLWidget.cpp  GLWidget.h  OpenGLShader.cpp  OpenGLShader.h  PlaneShader.cpp  PlaneShader.h  RectangleShader.cpp  RectangleShader.h  SimWorker.cpp  SimWorker.h  ValidatingSpinBox.cpp  ValidatingSpinBox.h  Window.cpp  Window.h  ball2d_qt5.cpp
ball2dtests/: CMakeLists.txt  collision_detection_tests.cpp
ball2dutils/: Ball2D.cpp  Ball2D.h  Ball2DSceneParser.cpp  Ball2DSceneParser.h  CMakeLists.txt  CMakeSourceFiles.txt  XMLSceneParser.cpp  XMLSceneParser.h
rigidbody2dcli/: CMakeLists.txt  CMakeSourceFiles.txt  rigidbody2d_cli.cpp
rigidbody2dqt4/: BoxGeometryRenderer.cpp  BoxGeometryRenderer.h  CMakeLists.txt  CMakeSourceFiles.txt  CircleGeometryRenderer.cpp  CircleGeometryRenderer.h  ContentWidget.cpp  ContentWidget.h  DisplayController2D.cpp  DisplayController2D.h  GLCircleRenderer2D.cpp  GLCircleRenderer2D.h  GLWidget.cpp  GLWidget.h  RigidBodyRenderer2D.cpp  RigidBodyRenderer2D.h  Window.cpp  Window.h  rigidbody2d_qt4.cpp
rigidbody2dqt5/: CMakeLists.txt  CMakeSourceFiles.txt  CircleShader.cpp  CircleShader.h  ContentWidget.cpp  ContentWidget.h  GLWidget.cpp  GLWidget.h  PlaneShader.cpp  PlaneShader.h  RectangleShader.cpp  Window.cpp  Window.h  rigidbody2d_qt5.cpp
rigidbody2dutils/: CMakeLists.txt  CMakeSourceFiles.txt  CameraSettings2D.cpp  CameraSettings2D.h  RigidBody2DSceneParser.cpp  RigidBody2DSceneParser.h
rigidbody3dcli/: CMakeLists.txt  CMakeSourceFiles.txt  rigidbody3d_cli.cpp
rigidbody3dtests/: CMakeLists.txt  rigidbody3d_inertia_tests.cpp
rigidbody3dutils/: CMakeLists.txt  CMakeSourceFiles.txt  RenderingState.cpp  RenderingState.h  RigidBody3DSceneParser.cpp  RigidBody3DSceneParser.h  XMLExporter.cpp  XMLExporter.h
scisim/: CMakeLists.txt  CMakeSourceFiles.txt  CompileDefinitions.cpp.in  CompileDefinitions.h  CompileDefinitions.h.in  HDF5File.cpp  HDF5File.h  PythonObject.cpp  PythonObject.h  PythonTools.cpp  PythonTools.h  ScriptingCallback.cpp  ScriptingCallback.h  StringUtilities.cpp  StringUtilities.h  Utilities.cpp  Utilities.h
scisim/CollisionDetection/: CollisionDetectionUtilities.cpp  CollisionDetectionUtilities.h
scisim/ConstrainedMaps/: ConstrainedMapUtilities.cpp  ConstrainedMapUtilities.h  FrictionSolver.cpp  FrictionSolver.h  GRRFriction.cpp  GRRFriction.h  GeometricImpactFrictionMap.cpp  GeometricImpactFrictionMap.h  ImpactFrictionMap.cpp  ImpactFrictionMap.h  ImpulsesToCache.h  IpoptUtilities.cpp  IpoptUtilities.h  QPTerminationOperator.cpp  QPTerminationOperator.h  Sobogus.cpp  Sobogus.h  StabilizedImpactFrictionMap.cpp  StabilizedImpactFrictionMap.h  StaggeredProjections.cpp  StaggeredProjections.h  StewartAndTrinkleImpactFrictionMap.cpp  StewartAndTrinkleImpactFrictionMap.h  SymplecticEulerImpactFrictionMap.cpp  SymplecticEulerImpactFrictionMap.h
scisim/ConstrainedMaps/FrictionMaps/: BoundConstrainedMDPOperatorIpopt.cpp  BoundConstrainedMDPOperatorIpopt.h  BoundConstrainedMDPOperatorQL.cpp  BoundConstrainedMDPOperatorQL.h  FischerBurmeisterBoundConstrained.cpp  FischerBurmeisterBoundConstrained.h  FischerBurmeisterSmooth.cpp  FischerBurmeisterSmooth.h  FrictionOperator.cpp  FrictionOperator.h  FrictionOperatorUtilities.cpp  FrictionOperatorUtilities.h  LinearMDPOperatorIpopt.cpp  LinearMDPOperatorIpopt.h  LinearMDPOperatorQL.cpp  LinearMDPOperatorQL.h  RestrictedSampleMDPOperatorIpopt.cpp  RestrictedSampleMDPOperatorIpopt.h  SmoothMDPOperatorIpopt.cpp  SmoothMDPOperatorIpopt.h
scisim/ConstrainedMaps/ImpactMaps/: FischerBurmeisterImpact.cpp  FischerBurmeisterImpact.h  GROperator.cpp  GROperator.h  GRROperator.cpp  GRROperator.h  GaussSeidelOperator.cpp  GaussSeidelOperator.h  ImpactMap.cpp  ImpactMap.h  ImpactOperator.cpp  ImpactOperator.h  ImpactOperatorUtilities.cpp  ImpactOperatorUtilities.h  ImpactSolution.cpp  ImpactSolution.h  JacobiOperator.cpp  JacobiOperator.h  LCPOperatorAPGD.cpp  LCPOperatorAPGD.h  LCPOperatorIpopt.cpp  LCPOperatorIpopt.h  LCPOperatorQL.cpp  LCPOperatorQL.h  LCPOperatorQLVP.cpp  LCPOperatorQLVP.h  MinMapImpact.cpp  MinMapImpact.h  NonNegativeProjection.cpp  NonNegativeProjection.h
scisim/ConstrainedMaps/bogus/: Ball2DSobogusInterface.cpp  Ball2DSobogusInterface.h  RigidBody2DSobogusInterface.cpp  RigidBody2DSobogusInterface.h  RigidBody3DSobogusInterface.cpp  RigidBody3DSobogusInterface.h
scisim/Constraints/: ConstrainedSystem.cpp  ConstrainedSystem.h  Constraint.cpp  Constraint.h
scisim/Math/: MathDefines.h  MathUtilities.cpp  MathUtilities.h  Rational.h  SparseMatrixUtilities.cpp  SparseMatrixUtilities.h
scisim/Math/QL/: QLUtilities.cpp  QLUtilities.h
scisim/Math/QPSolvers/: ProjectionSolvers.cpp  ProjectionSolvers.h  SparseMatrixVectorOperators.cpp  SparseMatrixVectorOperators.h
scisim/Timer/: TimeUtils.cpp  TimeUtils.h
scisim/UnconstrainedMaps/: FlowableSystem.cpp  FlowableSystem.h  UnconstrainedMap.cpp  UnconstrainedMap.h
scisimtests/: CMakeLists.txt  narrowphase_tests.cpp  rational_number_tests.cpp  sparse_matrix_tests.cpp  string_utility_tests.cpp
(+427 files in other folders)
